prometheus/grafana/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.dev.home`)
      services:
        - kind: Service
          scheme: http
          name: grafana
          port: 3000
